pentagon structure added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <!-- Your content goes here -->
     <main>
       <h4>Please Refresh the page to play</h4>
     </main>
+    <dialog open></dialog>
     <script src="main.js"></script>
   </body>
 </html>
