--- a/game-animation.html
+++ b/game-animation.html
@@ -1,13 +1,13 @@
 <div class="pentagon">
   <div class="plane">
-    <div class="rock">Rock</div>
+    <img class="rock" src="rock.svg">
   </div>
   <div class="plane">
-    <div class="paper">Paper</div>
-    <div class="scissors">Scissors</div>
+    <img class="paper" src="paper.svg">
+    <img class="scissors" src="scissors.svg">
   </div>
   <div class="plane">
-    <div class="lizard">Lizard</div>
-    <div class="spock">Spock</div>
+    <img class="lizard" src="lizard.svg">
+    <img class="spock" src="spock.svg">
   </div>
 </div>
